--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -38,6 +38,16 @@ RUN cd /var/www; \
 RUN	echo 'alias phpcs="php /var/www/phpcs/bin/phpcs"' >> ~/.bashrc;
 RUN	php /var/www/phpcs/bin/phpcs --config-set installed_paths /var/www/phpcs,/var/www/analysis,/var/www/phpcsutils,/var/www/vip_cs,/var/www/wpcs;
 
+#WP-CLI
+COPY wp-su.sh /usr/local/bin/wp
+RUN	curl -o /usr/local/bin/wp-cli.phar https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar; \
+	chmod a+x /usr/local/bin/wp-cli.phar; \
+	{ \
+		echo 'apache_modules:'; \
+		echo '  - mod_rewrite'; \
+	} > /var/www/wp-cli.yml
+
+
 ### ToDo FUTURO: Install Xdebug manual
 
 ### ToDo FUTURO: Node + libraries + Gulp
