--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - WORDPRESS_DB_PASSWORD=password
       - WORDPRESS_DB_HOST=mysql
       - MYSQL_PORT_3306_TCP=3306
+      - XDEBUG=true
     restart: unless-stopped
     ports:
       - "80:80"
