--- a/docker/dev.ini
+++ b/docker/dev.ini
@@ -4,5 +4,8 @@ memory_limit=512M
 max_execution_time=120
 max_input_time=60
 
+# Memcache
+extension=memcache.so
+
 # Necessario para funcionar 'mailhog'
 sendmail_path='/usr/bin/mhsendmail --smtp-addr="mailhog:1025"'
