--- a/docker/dev.ini
+++ b/docker/dev.ini
@@ -1,11 +1,9 @@
 # Altere as config que deseja
-max_input_vars = 99999
+max_input_vars=99999
 memory_limit=512M
 max_execution_time=120
 max_input_time=60
+default_socket_timeout=200
 
 # Memcache
 extension=memcache.so
-
-# Necessario para funcionar 'mailhog'
-sendmail_path='/usr/bin/mhsendmail --smtp-addr="mailhog:1025"'
