Adição do Composer
Foi adicionado a lib Composer para permitir que se execute essa
ferramenta dentro do container WordPress (assim como o PHPCS
por exemplo). Também foi ajustado o README.md com algumas
correções e atualizações.

--- a/docker-image/Dockerfile
+++ b/docker-image/Dockerfile
@@ -36,19 +36,21 @@ COPY php_compatibility.zip /var/www/phpcompatibility.zip
 COPY vip_cs.zip /var/www/vip_cs.zip
 COPY wpcs.zip /var/www/wpcs.zip
 COPY phpunit.zip /var/www/phpunit.zip
+COPY composer.zip /var/www/composer.zip
 RUN cd /var/www; \
 	unzip analysis.zip; \
 	unzip phpcsutils.zip; \ 
 	unzip phpcompatibility.zip; \
 	unzip vip_cs.zip; \
 	unzip wpcs.zip; \
+	unzip composer.zip; \
 	unzip phpunit.zip;
 RUN	echo 'alias phpcs="php /var/www/phpcs/bin/phpcs"' >> ~/.bashrc;
 RUN	echo 'alias phpunit="php /var/www/phpunit-nightly.phar"' >> ~/.bashrc;
+RUN	echo 'alias composer="php /var/www/composer.phar"' >> ~/.bashrc;
 RUN	php /var/www/phpcs/bin/phpcs --config-set installed_paths /var/www/phpcs,/var/www/analysis,/var/www/phpcsutils,/var/www/PHPCompatibility,/var/www/vip_cs,/var/www/wpcs;
 
 # WP-CLI
-
 COPY wp-su.sh /usr/local/bin/wp
 COPY wp-cli.zip /usr/local/bin/wp-cli.zip
 RUN  cd /usr/local/bin; \
